# taro-harmony-capi-library

./: .clang-format  .clang-tidy  .gitignore  .licenserc.yaml  CMakeLists.txt  README.md  compile_flags.txt  init.cpp
.githooks/: commit-msg
.github/workflows/: check.yml  format.yml
arkjs/: ArkJS.cpp  ArkJS.h  ArkTSBridge.cpp  ArkTSBridge.h  Scope.h
engine/extras/: hitrace_systrace_section.h
engine/jsi_executor/: jsi_executor.cpp  jsi_executor.h  jsi_native_modules.cpp  jsi_native_modules.h  qjs_executor_factory.cpp  qjs_executor_factory.h
engine/quickjs_jsi/: jsi_qjs_value_converter.cpp  jsi_qjs_value_converter.h  qjs_host_proxy.cpp  qjs_host_proxy.h  qjs_pointer_value.cpp  qjs_pointer_value.h  qjs_runtime.cpp  qjs_runtime.h  qjs_runtime_config.h  qjs_runtime_factory.cpp  qjs_runtime_factory.h
engine/react_common/: call_invoker.h  error_utils.h  js_big_string.cpp  js_big_string.h  js_executor.cpp  js_executor.h  message_queue_thread.cpp  message_queue_thread.h  method_call.cpp  method_call.h  module_registry.cpp  module_registry.h  native_module.h  native_to_js_bridge.cpp  native_to_js_bridge.h  runtime_executor.h  scheduler_priority.h  systrace_section.h
exports/: document.cpp  document.h  event.cpp  event.h  framework_react.cpp  framework_react.h  manager.cpp  manager.h  napi_bridge.cpp  napi_bridge.h
helper/: BitVector.h  ColorUtils.cpp  ColorUtils.h  Debug.h  FileDownloader.cpp  FileDownloader.h  FileManager.cpp  FileManager.h  FontParser.h  ImageLoader.cpp  ImageLoader.h  Marcos.h  Matrix4.cpp  Matrix4.h  Optional.cpp  Optional.h  StringUtils.cpp  StringUtils.h  SwitchManager.cpp  SwitchManager.h  TaroAllocationMetrics.cpp  TaroAllocationMetrics.h  TaroLog.cpp  TaroLog.h  TaroTimer.h  Time.cpp  Time.h  api_cost_statistic.cpp  api_cost_statistic.h  life_statistic.cpp  life_statistic.h  scalar.h  string.cpp  string.h  sync_queue.h
patches/folly/: Demangle.cpp
patches/libevent/armeabi-v7a/: evconfig-private.h
runtime/: NapiDialogNodeApi.cpp  NapiDialogNodeApi.h  NapiGetter.cpp  NapiGetter.h  NapiSetter.cpp  NapiSetter.h  NativeGestureApi.cpp  NativeGestureApi.h  NativeNodeApi.cpp  NativeNodeApi.h  TaroYogaApi.cpp  TaroYogaApi.h  constant.cpp  constant.h  dirty_vsync_task.cpp  dirty_vsync_task.h  keyframe_vsync.cpp  keyframe_vsync.h  render.cpp  render.h  tmp_resource_manager.h
runtime/api/: selectory_query.cpp  selectory_query.h
runtime/cssom/: CSSRule.cpp  CSSRule.h  CSSStyleDeclaration.cpp  CSSStyleDeclaration.h  CSSStyleRule.h  CSSStyleSheet.cpp  CSSStyleSheet.h  CssStyleRule.cpp  RuleFeature.cpp  RuleFeature.h
runtime/cssom/dimension/: calc.cpp  calc.h  context.h  dimension.cpp  dimension.h  string_utils.h  utils.h
runtime/cssom/font/: CSSFont.cpp  CSSFont.h  FontFamilyManager.cpp  FontFamilyManager.h
runtime/cssom/invalidations/: StyleInvalidator.cpp  StyleInvalidator.h  StyleValidity.h
runtime/cssom/media/: CSSMediaCondition.cpp  CSSMediaCondition.h  CSSMediaFeature.cpp  CSSMediaFeature.h  CSSMediaHelper.cpp  CSSMediaHelper.h  CSSMediaItem.h  CSSMedias.cpp  CSSMedias.h
runtime/cssom/resolver/: StyleTreeResolver.cpp  StyleTreeResolver.h
runtime/cssom/stylesheet/: IAttribute.cpp  IAttribute.h  align_content.h  align_items.h  align_self.h  animation.cpp  animation.h  animation_multi.cpp  animation_multi.h  aspect_ratio.h  attribute_base.h  background_color.h  background_image.cpp  background_image.h  background_position_x.h  background_position_y.h  background_repeat.h  background_size.cpp  background_size.h  border_bottom_color.h  border_bottom_left_radius.h  border_bottom_right_radius.h  border_bottom_style.h  border_bottom_width.h  border_left_color.h  border_left_style.h  border_left_width.h  border_right_color.h  border_right_style.h  border_right_width.h  border_top_color.h  border_top_left_radius.h  border_top_right_radius.h  border_top_style.h  border_top_width.h  bottom.h  bottom_bottom.h  box_orient.h  box_shadow.cpp  box_shadow.h  (+63 more)
runtime/dom/: class_list.cpp  class_list.h  document.cpp  document.h  event_source.cpp  event_source.h  node.cpp  node.h  node_visitor.h
runtime/dom/animation/: animate.cpp  animate.h  animation_config.cpp  animation_config.h  animation_lock.cpp  animation_lock.h  animation_prop_types.h  animation_property.cpp  animation_property.h  css_animation.cpp  css_animation.h  css_transition.cpp  css_transition.h  js_animation.cpp  js_animation.h  js_animation_param.cpp  js_animation_param.h  js_animator.cpp  js_animator.h  node_animations.cpp  node_animations.h  props_controller.cpp  props_controller.h
runtime/dom/ark_nodes/: arkui_base_node.cpp  arkui_base_node.h  arkui_node.cpp  arkui_node.h  arkui_node_adapter.cpp  arkui_node_adapter.h  button.cpp  button.h  canvas.cpp  canvas.h  checkbox.cpp  checkbox.h  custom.cpp  custom.h  ets.cpp  ets.h  flex.cpp  flex.h  flow_item.cpp  flow_item.h  image.cpp  image.h  list.cpp  list.h  list_item.cpp  list_item.h  list_item_group.cpp  list_item_group.h  picker.cpp  picker.h  progress.cpp  progress.h  radio.cpp  radio.h  scroll.cpp  scroll.h  scroll_container.cpp  scroll_container.h  slider.cpp  slider.h  (+20 more)
runtime/dom/element/: button.cpp  button.h  canvas.cpp  canvas.h  checkbox.cpp  checkbox.h  checkbox_group.cpp  checkbox_group.h  element.cpp  element.h  ets_component.cpp  ets_component.h  flow_item.cpp  flow_item.h  flow_section.cpp  flow_section.h  icon.cpp  icon.h  image.cpp  image.h  input.cpp  input.h  label.cpp  label.h  list.cpp  list.h  list_item.cpp  list_item.h  list_item_group.cpp  list_item_group.h  movable_area.cpp  movable_area.h  movable_view.h  (+29 more)
system/: system_info.cpp  system_info.h
taro/: instance.cpp  instance.h  native_logger.cpp  native_logger.h
test/: index.h
test/animation/: css_animation_test.cpp  css_transition_test.cpp
test/engine/: qjs_host_proxy_test.h
thread/: AbstractTaskRunner.h  DefaultExceptionHandler.cpp  DefaultExceptionHandler.h  NapiTaskRunner.cpp  NapiTaskRunner.h  TaskExecutor.cpp  TaskExecutor.h  ThreadTaskRunner.cpp  ThreadTaskRunner.h
types/taro-native-node/: index.d.ts  obfuscation-rules.txt  oh-package.json5
(+171 files in other folders)
